--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "botbuilder": "^3.13.1",
+    "botbuilder-azure": "^3.1.0",
     "dotenv-extended": "^1.0.4",
     "restify": "^4.3.0"
   },
